added examples grids

--- a/source/styles/styles.styl
+++ b/source/styles/styles.styl
@@ -10,23 +10,6 @@ html, body {
     box-sizing: border-box;
   }
 }
-
-.code {
-  display: none;
-  font-size: 24px;
-  line-height: 1.5;
-
-  &.show {
-    display: block;
-  }
-}
-
-.landing {
-  max-width: 1240px;
-  width: 100%;
-  margin: auto;
-  padding: 20px;
-}
 .title {
   text-align: center;
   margin: 50px auto;
@@ -37,21 +20,110 @@ html, body {
   letter-spacing: 0.8px;
   color: $black;
 }
-.layout-box {
+
+.examples {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+
   width: 100%;
-  padding: 0;
-  margin: 40px 0;
-}
-.layout-item {
-  padding: 10px;
-  border: 2px solid #2a862a;
+  height: 100vh;
 
-  font-size: 20px;
+  padding-top: 150px;
 
-  border-radius: 3px;
-  list-style: none;
-  background: rgba(42, 134, 42, 0.5);
+  &-nav {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+    &__link {
+      text-align: center;
+      vertical-align: middle;
+      padding: 30px;
+      margin: 0 20px 40px;
+      border: 3px solid;
+
+      border-radius: 50%;
+      font-size: 18px;
+      line-height: 80px;
+      text-decoration: none;
+
+      transition: all 0.25s;
+
+      &:hover {
+        transform: scale(1.2);
+        box-shadow: 0 2px 6px 0 rgba(29, 45, 72, 0.2), 0 1px 2px 0 rgba(29, 45, 72, 0.2);
+      }
+      &:active {
+        transform: scale(1);
+        box-shadow: inset 0 2px 6px 0 rgba(29, 45, 72, 0.2), 0 1px 2px 0 rgba(29, 45, 72, 0.2);
+      }
+      &:first-child {
+        border-color: #2a862a;
+        color: saturation(#2a862a, 50%);
+        background-color: rgba(#2a862a, 0.25);
+      }
+      &:nth-child(2) {
+        border-color: #108684;
+        color: saturation(#108684, 50%);
+        background-color: rgba(#108684, 0.25);
+      }
+      &:nth-child(3) {
+        border-color: #f0ab32;
+        color: saturation(#f0ab32, 50%);
+        background-color: rgba(#f0ab32, 0.25);
+      }
+      &:nth-child(4) {
+        border-color: #c26182;
+        color: saturation(#c26182, 50%);
+        background-color: rgba(#c26182, 0.25);
+      }
+      &:last-child {
+        border-color: #0b1a33;
+        color: saturation(#0b1a33, 50%);
+        background-color: rgba(#0b1a33, 0.25);
+      }
+    }
+  }
 }
+.nav-links {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+
+  text-align: center;
+  background: #ffffff;
+
+  a {
+    display: inline-block;
+    padding: 10px;
+
+    font-size: 16px;
+    color: rgba(#000000, 0.5);
+  }
+}
+.code {
+  display: none;
+  font-size: 24px;
+  line-height: 1.5;
+
+  span {
+    background: rgba(red, 0.25);
+  }
+  &.show {
+    display: block;
+  }
+}
+
+.grids-example {
+  max-width: 1240px;
+  width: 100%;
+  margin: auto;
+  padding: 20px;
+}
+
 .actions {
   display: flex;
   justify-content: center;
@@ -96,4 +168,20 @@ html, body {
   transform: scale(1.1);
 }
 
-@require "grids/*";
+
+
+
+@supports (display: grid) {
+  .examples-nav {
+    display: grid;
+    grid-template-columns: repeat(5, 150px);
+    grid-auto-rows: 150px;
+    grid-gap: 50px;
+
+    &__link {
+      margin: 0;
+    }
+  }
+}
+
+@require "examples/*";
