--- a/source/styles/examples/five.styl
+++ b/source/styles/examples/five.styl
@@ -1,131 +1,107 @@
-.page-wrap {
-  max-width: 900px;
-  margin: auto;
+.example-five {
+  padding-bottom: 60px;
 }
+.portfolio-heading {
 
-.header {
-  padding: 15px;
-  border-bottom: 3px solid #ff9800;
+  p {
+    text-align: center;
+    width: 100%;
+    margin: 60px 0 0;
 
-  background: #ffffff;
-
-  &__title {
-    margin: 16px 0;
+    font-size: 20px;
+    font-weight: 600;
+    color: #49c0ea;
   }
-  &__anons {
-    color: rgba(#000000, 0.5);
+  h2 {
+    text-align: center;
+    width: 100%;
+    margin: 5px 0 40px;
+
+    font-family: Play, 'OpenSans', Arial, sans-serif;
+    font-size: 40px;
+    font-weight: normal;
+    color: #2f3847;
   }
 }
+.projects-list__item {
 
-.aside {
-  padding: 15px;
-  background: rgba(#ff9800, 0.25);
-
-  &-title {
-    display: inline-block;
-    margin: 0 0 10px;
-    border-bottom: 1px dashed rgba(#000000, 0.25);
+  &._vertical {
+    float: left;
+    max-height: 615px;
+    &.--right {
+      float: right;
+    }
   }
-  &-nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
 
-    &__link {
-      display: inline-block;
-      width: auto;
-      padding: 10px;
-      text-decoration: none;
-      color: #000000;
+  &._horizontal {
+    max-width: 795px;
+    width: calc(100% / 3 * 2 - 15px);
 
-      &:hover {
-        background: #2f6cd1;
-        color: #ffffff;
+    .projects-list__item--hover {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      .projects-list__item--text {
+        padding-right: 30px;
       }
+
+      .btn-bg {
+        margin-top: 0;
+      }
+    }
+  }
+
+  &:hover .projects-list__item--hover {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .projects-list__item {
+    &._vertical, &._horizontal {
+      display: none;
     }
   }
 }
 
-.article {
+@supports (display: grid)  {
+  .example-five {
+    .projects-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-gap: 15px;
+      justify-items: center;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+    .projects-list__item {
+      float: none;
+      position: relative;
+      max-width: 390px;
+      min-width: 0;
+      max-height: none;
+      width: 100%;
+      margin: 0;
+      border: 1px solid #d9dde1;
+      overflow: hidden;
 
-  h2 {
-    margin: 0 0 30px;
-  }
-  p {
-    margin: 0 0 10px;
-  }
-  img {
-    float: left;
-    margin-right: 10px;
-  }
-}
+      &._vertical {
+        grid-row: 1 / 3;
 
-.footer {
-  padding: 15px;
+        &.--right {
+          grid-row: 3 / 5;
+          grid-column: 3 / 4;
+        }
+      }
 
-  text-align: center;
-  color: rgba(#ffffff, 0.25)
-  background: #0b1a33;
+      &._horizontal {
+        max-width: 795px;
+        grid-column: 2 / 4;
+      }
 
-  &__title {
-    margin: 16px;
-  }
-}
-.page-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-
-.header {
-  width: 100%;
-}
-.aside {
-  width: calc(33.3% - 15px);
-  margin: 20px 15px 20px 0;
-}
-
-.article {
-  width: calc(66.6% - 15px);
-  margin: 20px 0 20px 15px;
-}
-
-.footer {
-  width: 100%;
-}
-
-@supports (display: grid) {
-  .page-wrap {
-    display: grid;
-    grid-template-columns: 4fr 8fr;
-    grid-row-gap: 20px;
-    grid-column-gap: 30px;
-
-    grid-template-areas: "header header" "aside article" "footer footer";
-  }
-
-  .header {
-    width: auto;
-    margin: 0;
-    grid-area: header;
-  }
-  .aside {
-    width: auto;
-    margin: 0;
-    grid-area: aside;
-  }
-
-  .article {
-    width: auto;
-    margin: 0;
-    grid-area: article;
-  }
-
-  .footer {
-    width: auto;
-    margin: 0;
-    grid-area: footer;
+    }
   }
 }
