--- a/source/styles/examples/four.styl
+++ b/source/styles/examples/four.styl
@@ -1,27 +1,74 @@
-.portfolio-heading {
-  p {
-    text-align: center;
-    width: 100%;
-    margin: 60px 0 0;
+.example-five {
+  padding-bottom: 60px;
+}
+.page-title {
+  text-align: center;
+  width: 100%;
+  margin: 100px 0 60px;
 
-    font-size: 20px;
-    font-weight: 600;
-    color: #49c0ea;
+  font-family: 'Play', 'Open Sans', 'Arial', sans-serif;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 1.17;
+
+  color: #2f3847;
+}
+.btn {
+  display: block;
+  text-align: center;
+  max-width: 300px;
+  size: 100%  60px;
+  padding: 16px;
+  margin: 0;
+  border: none;
+
+  font-family: 'Play', 'Open Sans', 'Arial', sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 1.27;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  background-image: linear-gradient(to right, #0066ba, #49c0ea);
+  box-shadow: 0 2px 6px 0 rgba(29, 45, 72, 0.2), 0 1px 2px 0 rgba(29, 45, 72, 0.2);
+  cursor: pointer;
+  border-radius: 0;
+  -webkit-appearance: none;
+
+  &:hover {
+    background-image: linear-gradient(to right, #008cff, #79dcff);
+    box-shadow: 0 2px 6px 0 rgba(29, 45, 72, 0.2), 0 1px 2px 0 rgba(29, 45, 72, 0.2);
+    -webkit-appearance: none;
   }
-  h2 {
-    text-align: center;
-    width: 100%;
-    margin: 5px 0 40px;
+  &:active {
+    background-image: linear-gradient(rgba(29, 45, 72, 0.1), rgba(29, 45, 72, 0.1)), linear-gradient(to right, #0066ba, #49c0ea);
+    box-shadow: inset 0 1px 3px 0 rgba(29, 45, 72, 0.2);
+    -webkit-appearance: none;
+  }
+  &.btn-bg {
+    border-radius: 0;
+    border: solid 1px #ffffff;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: none;
 
-    font-size: 40px;
-    font-weight: normal;
-    color: #2f3847;
+
+    &:hover {
+      background-color: #49c0ea;
+      box-shadow: 0 2px 6px 0 rgba(29, 45, 72, 0.2), 0 1px 2px 0 rgba(29, 45, 72, 0.2);
+    }
+
+    &:active {
+      background-color: #45bfea;
+    }
   }
 }
 .projects {
-  max-width: 1220px;
+  max-width: 1240px;
+  width: 100%;
+  padding: 0 20px;
   margin: auto;
-  padding: 10px;
+  font-family: 'Play', 'Open Sans', 'Arial', sans-serif;
 }
 .projects-list {
   width: calc(100% + 15px);
@@ -30,41 +77,36 @@
 
   font-size: 0;
   list-style: none;
-}
 
+  text-align: center;
+}
 .projects-list__item {
   position: relative;
   display: inline-block;
   max-width: 390px;
   min-width: 300px;
-  width: calc(33.3% - 15px)
-  margin: 0 7.5px 15px;
+  max-height: 300px;
+  height: auto;
+  width: calc(100% / 3 - 15px)
+  margin: 7.5px;
+
+  border: 1px solid #d9dde1;
 
   overflow: hidden;
-
-  &._vertical {
-    float: left;
-
-    &.--right {
-      float: right;
-    }
-  }
-
-  &._horizontal {
-    max-width: none;
-    width: calc(66.6% - 15px);
-    max-height: 300px;
-  }
-
   &:hover .projects-list__item--hover {
     opacity: 1;
   }
 
   img {
     max-width: 100%;
+    min-height: 100%;
+    z-index: 0;
+  }
+
+  &:hover .projects-list__item--without-image {
+    opacity: 0;
   }
 }
-
 .projects-list__item--hover {
   position: absolute;
   top: 0;
@@ -85,34 +127,87 @@
 
   transition: all 0.25s;
 
+  z-index: 1;
+
   h3 {
+    position: relative;
+    display: block;
+    width: 100%;
+
+    padding-bottom: 17px;
     margin: 0;
     font-size: 34px;
     font-weight: 300;
     text-align: left;
-    color: #ffffff;
-  }
+    color: $white;
 
-  p {
-    position: relative;
+    &::after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
 
-    margin: 28px 0 30px;
-
-    font-size: 20px;
-    line-height: 1.7;
-    text-align: left;
-    color: #ffffff;
-
-    &::before {
-      position-align(-20px, auto, 0, auto);
       content: '';
       size: 30px 2px;
+      margin: auto;
 
       background: $white;
     }
   }
+
+  p {
+    position: relative;
+    display: block;
+    width: 100%;
+
+    font-weight: 300;
+
+    margin-top: 11px;
+
+    font-size: 20px;
+    line-height: 1.7;
+    text-align: left;
+    color: $white;
+  }
+
+  .btn-bg {
+    margin-top: 30px;
+    background-image: none;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid $white;
+  }
+}
+.projects-list__item--hover {
+  h3 {
+    &::after {
+      display: none;
+    }
+  }
 }
 
+@media screen and (max-width: 1123px) {
+  .projects-list__item--hover {
+    h3 {
+      font-size: 23px;
+      font-weight: 300;
+      text-align: left;
+
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        size: 23px 2px;
+      }
+    }
+
+    p {
+      margin-top: 15px;
+
+      text-align: left;
+      font-size: 15px;
+      line-height: 1.6;
+    }
+  }
+}
 @media screen and (max-width: 1023px) {
   .projects-list {
     display: flex;
@@ -122,78 +217,59 @@
 
   .projects-list__item {
     width: calc(50% - 15px);
-
-    &._vertical, &._horizontal {
-      display: none;
-    }
-  }
-}
-
-@media screen and (max-width: 670px) {
-  .projects-list__item {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-
-    &._vertical {
-      display: none;
-    }
   }
 
   .projects-list__item--hover {
-    align-items: center;
-
     h3 {
-      font-size: 23px;
-      font-weight: 300;
+      text-align: center;
+
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
     }
 
     p {
       text-align: center;
-      font-size: 15px;
-      line-height: 1.6;
-
-      &::before {
-        top: -15px;
-        right: 0;
-      }
     }
+  }
+}
+@media screen and (max-width: 670px) {
+  .page-title {
+    font-size: 30px;
+    line-height: 1.33;
+    margin: 30px 0 10px;
+  }
+  .projects-list__item {
+    width: calc(100% - 15px);
+    margin: 0 0 10px;
   }
 }
 
 @supports (display: grid)  {
-.projects-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-auto-flow: row dense;
-  grid-gap: 15px;
-
-  width: 100%;
-  padding: 0;
-  margin: 0 0 40px;
-}
-
-.projects-list__item {
-  position: relative;
-  max-height: 300px;
-  width: auto;
-  margin: 0 auto;
-
-  &._vertical-1 {
-    grid-row: 1 / 3;
-    max-height: 615px;
-    float: none;
+  .example-four {
+    .projects-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-gap: 15px;
+      justify-items: center;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+    .projects-list__item {
+      position: relative;
+      max-width: 390px;
+      min-width: 0;
+      max-height: none;
+      width: 100%;
+      margin: 0;
+      border: 1px solid #d9dde1;
+      overflow: hidden;
+    }
   }
-  &._vertical-2 {
-    grid-row: 3 / 5;
-    grid-column-start: 3;
-    max-height: 615px;
-    float: none;
-  }
-  &._horizontal {
-    width: auto;
-    float: none;
-    grid-column: 2 / 4;
-  }
-}
 }
