--- a/source/styles/examples/five.styl
+++ b/source/styles/examples/five.styl
@@ -64,6 +64,18 @@
     }
   }
 }
+@media screen and (max-width: 670px) {
+  .portfolio-heading {
+    p {
+      margin-top: 20px;
+      font-size: 20px;
+    }
+    h2 {
+      font-size: 29px;
+      line-height: 1.38;
+    }
+  }
+}
 
 @supports (display: grid)  {
   .example-five {
