--- a/source/styles/examples/six.styl
+++ b/source/styles/examples/six.styl
@@ -98,6 +98,15 @@
   width: 100%;
 }
 
+@media screen and (max-width: 768px) {
+  .aside,
+  .article {
+    width: 100%;
+    padding: 0 15px;
+    margin: 20px 0 ;
+  }
+}
+
 @supports (display: grid) {
   .page-wrap {
     display: grid;
@@ -106,9 +115,7 @@
     grid-row-gap: 20px;
     grid-column-gap: 30px;
 
-    grid-template-areas: "header header"
-                         "aside article"
-                         "footer footer";
+    grid-template-areas: "header header" "aside article" "footer footer";
   }
 
   .header {
@@ -132,5 +139,19 @@
     width: auto;
     margin: 0;
     grid-area: footer;
+  }
+  @media screen and (max-width: 768px) {
+
+    @supports (display: grid) {
+      .page-wrap {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: 210px 1fr 1fr 48px;
+        grid-row-gap: 20px;
+        grid-column-gap: 30px;
+
+        grid-template-areas: "header" "aside" "article" "footer";
+      }
+    }
   }
 }
