--- a/source/styles/examples/five.styl
+++ b/source/styles/examples/five.styl
@@ -52,7 +52,8 @@
     }
   }
 
-  &:hover .projects-list__item--hover {
+  &:hover .projects-list__item--hover,
+  &:focus .projects-list__item--hover {
     opacity: 1;
   }
 }
