--- a/source/styles/examples/four.styl
+++ b/source/styles/examples/four.styl
@@ -43,7 +43,8 @@
     border-radius: 0;
     -webkit-appearance: none;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-image: linear-gradient(to right, #008cff, #79dcff);
       box-shadow: 0 2px 6px 0 rgba(29, 45, 72, 0.2), 0 1px 2px 0 rgba(29, 45, 72, 0.2);
       -webkit-appearance: none;
@@ -94,7 +95,9 @@
   border: 1px solid #d9dde1;
 
   overflow: hidden;
-  &:hover .projects-list__item--hover {
+
+  &:hover .projects-list__item--hover,
+  &:focus .projects-list__item--hover {
     opacity: 1;
   }
 
@@ -104,7 +107,8 @@
     z-index: 0;
   }
 
-  &:hover .projects-list__item--without-image {
+  &:hover .projects-list__item--without-image,
+  &:focus .projects-list__item--without-image {
     opacity: 0;
   }
 }
@@ -129,6 +133,11 @@
   transition: all 0.25s;
 
   z-index: 1;
+
+  &:hover,
+  &:focus {
+    opacity: 1;
+  }
 
   h3 {
     position: relative;
