--- a/source/styles/examples/six.styl
+++ b/source/styles/examples/six.styl
@@ -1,8 +1,8 @@
 .page-wrap {
   max-width: 900px;
-  height: 100%;
+  min-height: 100%;
   padding-bottom: 40px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .header {
