--- a/source/styles/styles.styl
+++ b/source/styles/styles.styl
@@ -52,7 +52,9 @@ html, body {
 
       transition: all 0.25s;
 
-      &:hover {
+      &:hover,
+      &:focus {
+        outline: none;
         transform: scale(1.2);
         box-shadow: 0 2px 6px 0 rgba(29, 45, 72, 0.2), 0 1px 2px 0 rgba(29, 45, 72, 0.2);
       }
@@ -160,7 +162,8 @@ html, body {
 
   background-color: $gray;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: lightness($dark-coral, 45%);
   }
   &:active {
